--- a/DJs.css
+++ b/DJs.css
@@ -1,4 +1,4 @@
-/* r/DJs Styleshee maintained by /u/MrPopinjay
+/* /r/DJs Styleshee maintained by /u/MrPopinjay
  * https://github.com/lpil/reddit_css/blob/master/DJs.css
  * Pull requests welcome.
  */
