--- a/neovim.css
+++ b/neovim.css
@@ -9,7 +9,7 @@
 .wiki-page-content pre,
 .usertext-body pre {
   margin: 10px 0;
-  padding: 5px
+  padding: 5px;
 }
 .wiki-page-content pre,
 .wiki-page-content p>code,
@@ -22,9 +22,9 @@
 .wiki-page-content code,
 .usertext-body code {
   color: #222;
-  line-height:1.5em
+  line-height:1.5em;
 }
 .wiki-page-content p>code,
 .usertext-body p>code {
-  padding: 0 3px
+  padding: 0 3px;
 }
