reddit: sidebar linkinfo + sponsorship down

--- a/DJs.css
+++ b/DJs.css
@@ -132,3 +132,8 @@ div.side a[href*="submit?sidebar"]:hover{
 .side .md {
   overflow: visible;
 }
+.side .linkinfo,
+.side .sponsorshipbox {
+  position: relative;
+  top: 180px;
+}
