Fix DJs search expando. Thanks to /u/ke7ofi

--- a/DJs.css
+++ b/DJs.css
@@ -137,3 +137,7 @@ div.side a[href*="submit?sidebar"]:hover{
   position: relative;
   top: 180px;
 }
+#searchexpando {
+  position: relative;
+  top: 185px;
+}
