--- a/neovim.css
+++ b/neovim.css
@@ -14,6 +14,15 @@
   border: none;
 }
 
+#header {
+  border-bottom: 1px solid #ececec;
+}
+
+.tabmenu li a.choice {
+  display: inline-block;
+  text-transform: capitalize;
+}
+
 .thing a.title:visited {
   color: #6a6ca0;
 }
@@ -35,9 +44,9 @@ h2 {
 }
 
 .wiki-page-content pre,
-.wiki-page-content p>code,
+.wiki-page-content p > code,
 .usertext-body pre,
-.usertext-body p>code {
+.usertext-body p > code {
   font-size: 111%;
   background: #f6f6f6;
   border: 1px solid #ccc;
